basic project is done

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title></title>
   </head>
   <body>
+    <button id="button">Click to enter number of squares per side you want</button>
     <div class="container">
-        
+
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
